# PSMoveSteamVRBridge

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  PSMoveServiceReleaseURL.txt  README.md  appveyor.yaml  appveyor.yml  build.bat  build.properties  build.sh  clean-build.bat  clean.bat  clean.sh  full-build.bat  generate.bat  generate.sh  super_secret.txt.enc
ci/: generateDocumentation.sh  setup-ssh.sh
cmake/: FindOpenVR.cmake  FindPSMoveService.cmake
installer/: psmovesteamvrbridge.xml
src/: CMakeLists.txt
src/apptray/: CMakeLists.txt
src/main/cmake/: CMakeUtils.txt  FindOpenVR.cmake  FindPSMoveService.cmake
src/main/cpp/: driver_psmoveservice.h  openvr_driver_compat.h
src/main/cpp/driver/: combinedcontroller.cpp  concurrentqueue.h  config.cpp  config.h  config_manager.cpp  config_manager.h  constants.h  controller.cpp  controller.h  driver.cpp  driver.h  driver_psmoveservice.cpp  driver_psmoveservice.h  facing_handsolver.cpp  facinghandsolver.cpp  facinghandsolver.h  logger.cpp  logger.h  monitor.cpp  old_controller.cpp  old_controller.h  ps_combined_controller.cpp  ps_ds4_controller.cpp  ps_ds4_controller.h  ps_move_controller.cpp  ps_move_controller.h  ps_navi_controller.cpp  ps_navi_controller.h  psmovecontroller.cpp  psmovecontroller.h  psnavicontroller.cpp  server_driver.cpp  server_driver.h  serverdriver.cpp  serverdriver.h  settings_util.cpp  settings_util.h  settingsutil.cpp  trackable_device.cpp  trackable_device.h  (+12 more)
src/main/cpp/openvr-driver-compat/: openvr_controller_component.h  openvr_driver_compat.h
src/main/csharp/: PSMCSharpTools.sln
src/main/csharp/SystemTrayApp/: Constants.cs  PSMoveServiceContext.cs  Program.cs  SynchronizedContext.cs  SystemTrayApp.csproj  packages.config
src/main/csharp/SystemTrayApp/Config/: ConfigBase.cs  ConfigManager.cs  ControllerConfig.cs  DS4ControllerConfig.cs  FreePIEConfig.cs  PSMoveControllerConfig.cs  PSMoveSteamVRBridgeConfig.cs  PSNaviControllerConfig.cs  VirtualControllerConfig.cs
src/main/csharp/SystemTrayApp/FreePIE/: FreePIEApi.cs  FreePIEContext.cs
src/main/csharp/SystemTrayApp/PSMoveService/: PSMControllerPool.cs  PSMDevicePool.cs  PSMHmdPool.cs  PSMTrackerPool.cs  PSMoveServiceContext.cs
src/main/csharp/SystemTrayApp/Properties/: AssemblyInfo.cs  Resources.Designer.cs
src/main/csharp/SystemTrayApp/Renderer/: GlCamera.cs  GlMaterial.cs  GlMaterialInstance.cs  GlModelInstance.cs  GlProgram.cs  GlResourceManager.cs  GlScene.cs  GlTexture.cs  GlTriangulatedMesh.cs  GlVertexDefinition.cs  SteamVRDeviceInstance.cs
src/main/csharp/SystemTrayApp/SteamVR/: SteamVRContext.cs  SteamVRController.cs  SteamVRHeadMountedDisplay.cs  SteamVRRenderModel.cs  SteamVRRenderModelComponent.cs  SteamVRResourceManager.cs  SteamVRTrackedDevice.cs  SteamVRTracker.cs
src/main/csharp/SystemTrayApp/UI/: AppWindow.Designer.cs  AppWindow.cs  AppWindow.resx  ButtonMapping.Designer.cs  ControllerPanel.Designer.cs  ControllerPanel.cs  Dualshock4ControllerPanel.Designer.cs  Dualshock4ControllerPanel.cs  FreePIEControllerSlotMapping.Designer.cs  FreePIEControllerSlotMapping.cs  FreePIEHmdSlotMapping.Designer.cs  FreePIEHmdSlotMapping.cs  FreePIEPanel.Designer.cs  FreePIEPanel.cs  HMDPanel.Designer.cs  HMDPanel.cs  IAppPanel.cs  IControllerPanel.cs  PSMoveControllerPanel.cs  PSMoveServicePanel.Designer.cs  PSMoveServicePanel.cs  PSNaviControllerPanel.cs  SteamVRDeviceEntry.Designer.cs  SteamVRDeviceEntry.cs  SteamVRPanel.Designer.cs  SteamVRPanel.cs  SteamVRWindow.Designer.cs  SteamVRWindow.cs  VirtualControllerPanel.cs
src/main/csharp/SystemTrayApp/UI/Common/: TrackerVideoFrame.Designer.cs  TrackerVideoFrame.cs
src/main/csharp/SystemTrayApp/UI/FreePIE/: FreePIEControllerSlotMapping.Designer.cs  FreePIEControllerSlotMapping.cs  FreePIEHmdSlotMapping.Designer.cs  FreePIEHmdSlotMapping.cs  FreePIEPanel.Designer.cs  FreePIEPanel.cs
src/main/csharp/SystemTrayApp/UI/PSMoveService/: PSMoveServicePanel.Designer.cs  PSMoveServicePanel.cs
src/main/csharp/SystemTrayApp/UI/PSMoveService/Controllers/: ButtonMapping.cs  Dualshock4ControllerPanel.Designer.cs  Dualshock4ControllerPanel.cs  IControllerPanel.cs  PSMoveControllerPanel.Designer.cs  PSMoveControllerPanel.cs  PSNaviControllerPanel.Designer.cs  PSNaviControllerPanel.cs  VirtualControllerPanel.Designer.cs  VirtualControllerPanel.cs
src/main/csharp/SystemTrayApp/UI/SteamVR/: SteamVROpenGLFrame.Designer.cs  SteamVROpenGLFrame.cs  SteamVRPanel.Designer.cs  SteamVRPanel.cs  SteamVRWindow.cs
src/main/csharp/SystemTrayApp/UI/SteamVR/HMDAlignTool/: SteamVRHmdAlignTool.Designer.cs  SteamVRHmdAlignTool.cs  TestVideoFeed.Designer.cs  TestVideoFeed.cs
src/main/csharp/SystemTrayApp/Utility/: MathUtility.cs  PathUtils.cs  SteamVRUtility.cs  UserInterfaceUtility.cs
src/main/resources/input/: controller_profile.json  ds4_profile.json  legacy_bindings_psmove.json  playstation_dualshock4_profile.json  playstation_move_profile.json  playstation_navi_profile.json  psmove_profile.json  psmovesteamvrbridge_trayapp_actions.json  psmovesteamvrbridge_trayapp_vive_controller.json  psnavi_profile.json  steamvr_environments_bindings_psmove.json  virtual_controller_profile.json  vrcompositor_bindings_psmove.json
src/main/resources/localization/: localization.json  localization_en_us.json  localization_fr_FR.json
src/main/resources/scripts/installer/: Install.bat  SteamVR_InitialSetup.bat  SteamVR_ListAllDrivers.bat  SteamVR_ListAllDriversWin64.bat  SteamVR_RegisterDrivers.bat  SteamVR_ReinstallDriverWin64.bat  SteamVR_ReregisterDrivers.bat  SteamVR_ReregisterDriversWin64.bat  SteamVR_UnReregisterDrivers.bat  SteamVR_UnReregisterDriversWin64.bat  SteamVR_UnregisterDrivers.bat  Uninstall.bat
src/main/resources/scripts/msvc/: GenerateProjectFiles.bat  InitialSetupOfficialPSM_X64.bat
src/main/resources/settings/: default.vrsettings
src/main/scripts/msvc/: GenerateProjectFiles.bat  InitialSetupOfficialPSM_X64.bat
src/openvr_plugin/: CMakeLists.txt  driver_psmoveservice.cpp  driver_psmoveservice.h  driver_version.h  monitor_psmoveservice.cpp
(+6 files in other folders)
